--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,44 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #121212;
+  color: white;
+
+  &::-webkit-scrollbar {
+    width: 6px;
+  }
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #3f4442;
+  }
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    background-color: #111111;
+  }
+  input {
+    outline: none;
+  }
+}
+
+.main {
+  @apply h-full relative;
+}
+
+:root {
+  --content-spacing: clamp(
+    16px,
+    16px +
+      (100vw - var(--left-sidebar-width, 0px) - var(--panel-width, 0px) - 600px) /
+      424 * 8,
+    24px
+  );
+}
