--- a/src/pages/main/index.scss
+++ b/src/pages/main/index.scss
@@ -15,14 +15,7 @@
 }
 
 .main_content {
-  padding: clamp(
-    16px,
-    16px +
-      (100vw - var(--left-sidebar-width, 0px) - var(--panel-width, 0px) - 600px) /
-      424 * 8,
-    24px
-  );
-  @apply flex flex-col gap-6;
+  @apply flex flex-col gap-6 px-5;
 }
 .filters_div {
   @apply flex relative cursor-pointer items-center hover:bg-white/20 ease-in-out duration-200 bg-white/10 w-1/4 rounded-md font-bold;
